# CLAM

./: .gitignore  Dockerfile  Singularity  pyproject.toml
.github/workflows/: build_and_push_image.yml  build_container.yml
src/clam/: __init__.py  config.py  create_patches_fp_cfg.py  extract_features_fp_cfg.py  set_feature_env.sh
